cp project/force-app/main/default/objects/Tower__c/fields/Number_of_Floors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Floors__c</fullName>
    <label>Number of Floors</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>