cp project/force-app/main/default/objects/Tower__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Tower_Code__c</columns>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Number_of_Floors__c</columns>
    <columns>Total_Units__c</columns>
    <columns>Tower_Type__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>